реализован функционал работы с пользователями посредстово JPA (Spring boot и Hibernate). application.properties работает корректно